hphp/hack/test/enum_supertyping/typing/ordering.bad.php.exp
File "ordering.bad.php", line 4, characters 6-6:
Enum B cannot include enum A because B precedes A in the same file (Typing[4388])
